--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/application.properties
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Tomcat server port number 8080
+#Tomcat server port number 7070
 server.port=7070
 #context path default value : empty
 server.servlet.context-path=/BuyMeAdmin
@@ -7,9 +7,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/buymedb?useSSL=false&allowPubl
 spring.datasource.username=root
 spring.datasource.password=rishi123
 # JPA properties
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 #some images not display so add path matching prop
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
