--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/application.properties
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#Tomcat server port number 7070
-server.port=7070
+#Tomcat server port number 8080
+server.port=9070
 #context path default value : empty
 server.servlet.context-path=/BuyMeAdmin
 #DB properties
@@ -7,9 +7,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/buymedb?useSSL=false&allowPubl
 spring.datasource.username=root
 spring.datasource.password=rishi123
 # JPA properties
-spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
-#some images not display so add path matching prop
+spring.jpa.show-sql = false
+spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+#debug=true
+#logging.level.root=warn
+#logging.level.com.Buyme=DEBUG
+#logging.file.name=buyMe-backend.log
