--- a/BuyMeWebParent/BuyMeFrontEnd/src/main/resources/application.properties
+++ b/BuyMeWebParent/BuyMeFrontEnd/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-server.port=8083
+server.port=80
 server.servlet.context-path=/BuyMe
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/buymedb?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/buymedb
 spring.datasource.username=root
 spring.datasource.password=rishi123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
